e - add write access for updateMarkdown job

--- a/.github/workflows/updateMarkdown.yml
+++ b/.github/workflows/updateMarkdown.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   update-markdown-snippets:
     runs-on: windows-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - name: Run MarkdownSnippets
