--- a/SampleApp/XcodeWarnings.xcconfig
+++ b/SampleApp/XcodeWarnings.xcconfig
@@ -158,10 +158,23 @@ CLANG_ANALYZER_DEADCODE_DEADSTORES = YES
 CLANG_TIDY_MISC_REDUNDANT_EXPRESSION = YES
 CLANG_TIDY_BUGPRONE_REDUNDANT_BRANCH_CONDITION = YES
 
-// Swift Compiler - Custom Flags
+// Swift Compiler - Custom Flags (for Xcode 15)
 OTHER_SWIFT_FLAGS = -enable-upcoming-feature DisableOutwardActorInference -enable-upcoming-feature GlobalConcurrency -enable-upcoming-feature InferSendableFromCaptures
 
-// Swift Compiler - Language
+// Swift Compiler - Upcoming Features (for Xcode 16)
+SWIFT_ENABLE_BARE_SLASH_REGEX = YES
+SWIFT_UPCOMING_FEATURE_CONCISE_MAGIC_FILE = YES
+SWIFT_UPCOMING_FEATURE_INTERNAL_IMPORTS_BY_DEFAULT = YES
+SWIFT_UPCOMING_FEATURE_DEPRECATE_APPLICATION_MAIN = YES
+SWIFT_UPCOMING_FEATURE_DISABLE_OUTWARD_ACTOR_ISOLATION = YES
+SWIFT_UPCOMING_FEATURE_FORWARD_TRAILING_CLOSURES = YES
+SWIFT_UPCOMING_FEATURE_IMPLICIT_OPEN_EXISTENTIALS = YES
+SWIFT_UPCOMING_FEATURE_IMPORT_OBJC_FORWARD_DECLS = YES
+SWIFT_UPCOMING_FEATURE_INFER_SENDABLE_FROM_CAPTURES = YES
+SWIFT_UPCOMING_FEATURE_ISOLATED_DEFAULT_VALUES = YES
+SWIFT_UPCOMING_FEATURE_GLOBAL_CONCURRENCY = YES
+SWIFT_UPCOMING_FEATURE_REGION_BASED_ISOLATION = YES
+SWIFT_UPCOMING_FEATURE_EXISTENTIAL_ANY = YES
 SWIFT_STRICT_CONCURRENCY = complete
 
 // Swift Compiler - Warning Policies
