. e Exclude Package.resolved from SampleApp

--- a/SampleApp/.gitignore
+++ b/SampleApp/.gitignore
@@ -1,3 +1,5 @@
+SampleApp/SampleApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,xcode
 
