. e Run build every month

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: Build
 
 on:
   workflow_dispatch:
+  schedule:
+    # each 4th day of month
+    - cron: "0 0 4 * *"
   push:
     branches: [ main ]
   pull_request:
